CSS/style.css
/* Import Font families */
/* Rules to specify families:
    font-family: 'Roboto Mono', monospace;
    font-family: 'Source Code Pro', monospace;
    font-family: 'Heebo', sans-serif;
*/
@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@500&family=Roboto+Mono:wght@100;400;700&family=Source+Code+Pro&display=swap');

/* color swatches:
    Grey (Onyx): #35393C
    Eerie Black: #151515
    Bone (White): #E7E1D2
    Max Blue Purple: #A594F9
    Medium Slate Blue: #7371FC
    Light Sea Green: #2CA6A4
    Light Coral: #F87575
*/

/* animation definitions */
@keyframes blink {
    from {
        opacity: 100%;
    }

    50% {
        opacity: 0%;
    }

    to {
        opacity: 100%;
    }
}

@keyframes fadein {
    from {
        opacity: 0%;
    }

    to {
        opacity: 100%;
    }
}

html, body {
    background-color: #ECE4DC;
    height: 100%;
    overflow: hidden;
}

.anim {
    animation-name: fadein;
    animation-duration: 2s;
}

.main-header {
    letter-spacing: 3px;
    color: #26282A;
    font-size: 54px;
    font-family: 'Heebo', sans-serif;
    /*border-bottom: 2px solid #A594F9;*/
    text-shadow: 3px 2px #A594F9;
}

.navlist {
    margin-top: 50px;
}

.navlist > ul {
    list-style-type: none;
    padding-left: 0px;
}

.navlist > ul > li {
    font-size: 24px;
    margin-top: 5px;
    font-family: 'Source Code Pro', monospace;
}

.navlist > ul > li > a {
    color: #26282A;
    text-decoration: none;
}

.navlist > ul > li > a:hover {
    border-bottom: 2px solid #A594F9;
    transition: border-bottom 0.25s ease-in;
}

.navlist > ul > li > a:visited {
    text-decoration: none;
}

.console {
    width: 90%;
    height: 40vh;
    background-color: #35393C;
    border: 1px solid #F87575;
    box-shadow: 4px 4px 7px 1px #242424;
}

.c-menu {
    height: 9%;
    width: 100%;
    background-color: #fff;
    display: flex;
}

.c-win-title {
    margin-left: 10px;
}

.c-minimize {
    margin-left: auto;
    margin-right: 0px;
    width: 8%;
    height: 100%;
    border-left: 1px solid #000;
    border-right: 1px solid #000;
}

.dash {
    width: 30%;
    height: 5%;
    background-color: #000;
}

.c-quit {
    float: right;
    margin-left: 0px;
    margin-right: 0px;
    width: 8%;
    height: 100%;
    background-color: #f54242;
    text-align: center;
    color: #fff;
}

.c-body {
    width: 100%;
    height: 90%;
}

.c-body-text-container {
    height: auto;
    width: 100%;
    display: flex;
}

.c-body-text {
    color: #fff;
    margin: 5px;
    font-family: 'Source Code Pro', monospace;
    font-size: 14px;
}

.blinker {
    height: 4px;
    width: 12px;
    margin-bottom: 7px;
    background-color: #fff;
    animation-name: blink;
    animation-duration: 1s;
    animation-iteration-count: infinite;
}

.win-gui {
    position: absolute;
    /*display: flex;*/
    width: 60vw;
    height: 70vh;
    z-index: 999;
    background-color: #fff;
    top: 0;
    margin-top: 50px;
    border: 1px solid #2CA6A4;
    border-radius: 5px;
    box-shadow: 4px 4px 7px 1px #242424;
    background-color: #A594F9;
    overflow: auto;
    resize: both;
}

.win-gui-menu {
    height: 7%;
    width: 100%;
    display: flex;
    border-bottom: 1px solid #000;
    background-color: #fff;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}

.win-gui-menu > .c-win-title > #console-title {
    margin-bottom: 0;
}

.win-gui-menu > .c-minimize > .dash {
    width: 20%;
}

.win-gui-menu > .c-quit {
    border-top-right-radius: 5px;
    text-decoration: none;
    border: none;
}

.win-gui-menu > .c-quit > .exit-btn {
    margin-bottom: 0;
}

.win-gui > .c-body {
    overflow: visible;
}

.win-gui > .c-body > .c-body-text-container {
    display: block;
}

.about-profile {
    width: 100%;
    margin-top: 10px;
    margin-bottom: 10px;
    display: flex;
    justify-content: center;
}

.about-text {
    display: flex;
}

.profile-image {
    width: 128px;
    height: 128px;
    border-radius: 25px;
    border: 1px solid #000;
}

.profile-header {
    letter-spacing: 2px;
    margin-top: 10px;
    width: auto;
    color: #151515;
    font-family: 'Heebo', sans-serif;
}

.gui-body-text {
    color: #000;
    font-family: 'Roboto Mono', monospace;
}

.about-g {
    padding-right: 15px;
    padding-left: 17px;
}

.about-g > ul > li {
    color: #000;
    font-size: 16px;
    font-family: "Trebuchet MS", sans-serif;
}

.footer > ul {
    display: flex;
    list-style-type: none;
    padding-left: 0px;
}

.footer > ul > li {
    margin-right: 15px;
}

.footer > ul > li > a {
    color: #35393C;
    text-decoration: none;
}

